Closed Bug 1280513 Opened 9 years ago Closed 9 years ago

WinMouseScrollHandler should use LazyLogModule instead of PR_NewLogModule()

Categories

(Core :: Widget: Win32, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla50
Tracking Status
firefox50 --- fixed

People

(Reporter: masayuki, Assigned: masayuki)

Details

Attachments

(2 files)

For making WinMouseScrollHandler MOZ_LOG* environment variables aware, WinMouseScrollHandler should use LazyLogModule. Review commit: https://reviewboard.mozilla.org/r/59464/diff/#index_header See other reviews: https://reviewboard.mozilla.org/r/59464/
Comment on attachment 8763132 [details] Bug 1280513 part.1 Rename LogKeyStateImpl() to MouseScrollHandler::MaybeLogKeyState() https://reviewboard.mozilla.org/r/59462/#review56568
Attachment #8763132 - Flags: review?(m_kato) → review+
Comment on attachment 8763133 [details] Bug 1280513 part.2 WinMouseScrollHandler should use LazyLogModule instead of PR_NewLogModule() https://reviewboard.mozilla.org/r/59464/#review56570
Attachment #8763133 - Flags: review?(m_kato) → review+
Pushed by masayuki@d-toybox.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/27edcbca50af part.1 Rename LogKeyStateImpl() to MouseScrollHandler::MaybeLogKeyState() r=m_kato https://hg.mozilla.org/integration/mozilla-inbound/rev/84c7d65efcbd part.2 WinMouseScrollHandler should use LazyLogModule instead of PR_NewLogModule() r=m_kato
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: