Bug 1280513 part.1 Rename LogKeyStateImpl() to MouseScrollHandler::MaybeLogKeyState() r=m_kato

MozReview-Commit-ID: DGDrRO3Y9jD